# web_inspector

./: .gitignore  DEVELOPMENT.md  Makefile  README.md  SITEMAP_EXPLANATION.md  debug_test.py  demo_web_interface.py  example_usage.py  pyproject.toml  pytest.ini  run_web_server.py  simple_test.py  test_installation.py  test_text_extraction.py  test_url_normalization.py  test_web_interface.py
.cursor/rules/: llm-rule.mdc
backend/: __init__.py
backend/examples/: __init__.py  basic_usage.py  email_mode_demo.py
backend/tests/: __init__.py  test_email_extraction_fix.py  test_email_mode.py  test_patterns.py  test_utils.py
backend/webchecker/: __init__.py  main.py  patterns.py  scraper.py  utils.py  web_app.py
examples/: custom_patterns.py  find_trademarks.py
frontend/templates/: index.html
tests/: __init__.py  test_patterns.py  test_utils.py
webchecker/: __init__.py  main.py  patterns.py  scraper.py  utils.py  web_app.py
webchecker/templates/: index.html
